# lmtools

./: .gitignore  Cargo.toml  Dioxus.toml  data.db  data.sqlite-shm
assets/: main.css
src/: lm.rs  main.rs  search.rs  workers.rs
